Table classrooms {
  id varchar [pk]
  name varchar
  capacity int
  status varchar
  semester varchar
}

Table courses {
  id varchar [pk]
  name varchar
  min_teachers integer
  max_teachers integer
}

Table sections {
  id varchar [pk]
  course_id varchar [ref: > courses.id]
  name varchar
  period_required int
  required_seats int
}

Table teachers {
  id varchar [pk]
  name varchar
  status varchar
  semester varchar
  avatar varchar
}

Table teaching_registrations {
  id varchar [pk]
  teacher_id varchar [ref: > teachers.id]
  semester varchar
  status varchar
  max_courses int
}

Table course_preferences {
  id varchar [pk]
  semester varchar
  teacher_id varchar [ref: > teachers.id]
  teaching_registration_id varchar [ref: > teaching_registrations.id]
  course_id varchar [ref: > courses.id]
  preference_value int
}

Table periods {
  id varchar [pk]
  name varchar
  start_time time
  end_time time
  order_index int
  description varchar
}

Table time_preferences {
  id varchar [pk]
  teacher_id varchar [ref: > teachers.id]
  teaching_registration_id varchar [ref: > teaching_registrations.id]
  semester varchar
  day varchar
  period_id varchar [ref: > periods.id]
  preference_value int
}

Table schedules {
  id varchar [pk]
  semester varchar
  name varchar
  assignments jsonb
  statistics jsonb
  objective_value int
  penalties jsonb
  scores jsonb
}
